flux/manifests/04-apps/productivity/cryptpad/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cryptpad
  labels:
    app.kubernetes.io/name: cryptpad
    images/dockerhub: "true"
